<resources>
    <string name="app_name">SendSnap</string>
    <string name="snap_directory_name">/Send Snap</string>
    <string name="snap_saved_file_name">SendSnap-%1$d</string>
    <string name="snap_sent_file_name">tmp_photo</string>

    <string name="main_logo_path">M205.771,531.19 C142.501,531.19,80.977,513.171,27.83,479.055
    C22.8693,475.866,20.7689,469.692,22.7427,464.124
    C24.7166,458.556,30.3601,455.013,36.1562,455.849
    C80.7239,461.036,127.24,451.976,166.265,429.655
    C127.67,418.064,96.288,388.174,83.6085,348.543
    C82.242,344.266,83.229,339.609,86.2149,336.269
    C88.0372,334.243,90.4408,332.877,93.0481,332.321
    C62.9059,309.366,43.8741,273.124,43.8741,233.314
    C43.8741,228.834,46.2535,224.001,50.125,221.723
    C53.9974,219.445,58.7805,218.737,62.678,220.863
    C63.7914,221.496,64.93,222.103,66.0695,222.66
    C52.3779,202.438,44.7856,178.244,44.7856,152.986
    C44.7856,131.069,50.5807,109.456,61.6157,90.526
    C63.691,86.9326,67.4108,84.6044,71.5614,84.2751
    C75.6868,83.9719,79.7109,85.6927,82.3424,88.8814
    C133.541,151.671,207.643,191.48,287.567,199.655
    C287.213,195.834,287.036,191.936,287.036,188.089
    C287.036,119.58,342.789,63.826,411.298,63.826
    C443.11,63.826,473.911,76.1511,496.89,97.9159
    C518.023,93.0817,538.269,84.9582,557.174,73.7465
    C561.704,71.114,567.374,71.4936,571.498,74.7334
    C575.598,78.0235,577.269,83.4903,575.674,88.5013
    C571.65,101.079,565.678,112.847,558.01,123.401
    C563.274,121.579,568.437,119.529,573.524,117.277
    C578.611,114.949,584.71,116.366,588.329,120.719
    C591.948,125.021,592.278,131.222,589.164,135.904
    C574.459,157.821,556.542,176.929,535.865,192.797
    C535.941,195.53,535.966,198.289,535.966,201.022
    C535.967,302.872,487.306,406.934,399.971,470.311
    C348.156,507.912,282.727,531.192,205.771,531.192 Z</string>

    <!-- Auth Activity -->
    <string name="auth_btn_log_in">Log in</string>
    <string name="auth_btn_sign_up">Sign up</string>

    <!-- Log In Fragment -->
    <string name="log_in_name_hint">Name or Email</string>
    <string name="log_in_password_hint">Password</string>
    <string name="log_in_btn_log_in">Log In</string>

    <!-- Sign Up Fragment-->
    <string name="sign_up_name_hint">Login</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_password_confirmation_hint">Password confirmation</string>
    <string name="sign_up_btn_sign_up">Sign Up</string>

    <!-- Camera Fragment -->
    <string name="camera_permissions_denied_title">Permissions denied</string>
    <string name="camera_permissions_denied_message">We need all of these permissions to record and save your snaps. Please grant all permissions in settings and open app again.</string>
    <string name="camera_btn_invitations">My invitations</string>
    <string name="camera_btn_add_friends_text">Add friends</string>
    <string name="camera_btn_my_friends_text">My friends</string>

    <!-- Settings Fragment -->
    <string name="settings_title">Settings</string>
    <string name="settings_section_account">Account Information</string>
    <string name="settings_section_notifications">Notifications</string>
    <string name="settings_notification_display">Turn on display</string>
    <string name="settings_notification_led">Show LED</string>
    <string name="settings_notification_vibration">Vibration</string>
    <string name="settings_notification_sound">Sound</string>
    <string name="settings_section_others">Others</string>
    <string name="settings_btn_log_out">Log out</string>
    <string name="settings_enter_display_name">Enter display name</string>

    <!-- Edit Snap Fragment -->
    <string name="edit_snap_number_picker_title">Select Snap duration</string>
    <string name="edit_snap_snap_saved_message">Snap saved</string>

    <!-- Dialog -->
    <string name="dialog_btn_positive">Ok</string>
    <string name="dialog_btn_negative">Cancel</string>

    <!-- Select Snap Recipient Fragment -->
    <string name="select_snap_recipient_title">Select recipient</string>

    <!-- Errors -->
    <string name="error_field_blank">%1$s cannot be empty</string>
    <string name="error_field_wrong_length">%1$s is incorrect, must have minimum %2$d and maximum %3$d characters length</string>
    <string name="error_invalid_login_credentials">Invalid login or password</string>
    <string name="error_passwords_not_match">Passwords does not match</string>
    <string name="error_field_invalid">%1$s is invalid, please check and try again</string>
    <string name="error_field_taken">%1$s is already taken</string>
    <string name="error_terms_not_accepted">Terms and conditions must be accepted</string>
    <string name="error_network">Cannot connect to server. Please check your connection.</string>
    <string name="error_server">Server error, please try again later.</string>
    <string name="error_session_expired">Your session has expired, please log in again.</string>
    
    
    <!-- Field Names -->
    <!-- User -->
    <string name="user_name">Login</string>
    <string name="user_display_name">Display Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_password_confirmation">Password Confirmation</string>
</resources>
