<android.support.constraint.ConstraintLayout
    android:id="@+id/clCameraMainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/camera_background">

    <TextureView
        android:id="@+id/tvCameraPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/vCameraFrontFlash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        android:background="@color/camera_v_front_camera_flash"
        android:visibility="gone"/>

    <com.example.pdedio.sendsnap.common.views.BaseImageButton_
        android:id="@+id/btnCameraChangeCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/camera_btn_change_camera_margin_top"
        android:layout_marginRight="@dimen/camera_btn_change_camera_margin_right"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/btn_change_camera"
        android:background="@android:color/transparent"/>

    <com.example.pdedio.sendsnap.common.views.BaseImageButton_
        android:id="@+id/btnCameraTopMenu"
        android:layout_width="@dimen/camera_btn_menu_size"
        android:layout_height="@dimen/camera_btn_menu_size"
        android:layout_marginTop="@dimen/camera_btn_menu_margin_top"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/btn_top_menu"
        android:background="@null"
        android:scaleType="fitCenter"/>

    <com.example.pdedio.sendsnap.common.views.BaseImageButton_
        android:id="@+id/btnCameraFlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/camera_btn_flash_margin_top"
        android:layout_marginLeft="@dimen/camera_btn_flash_margin_left"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/btn_flash_disabled"
        android:background="@android:color/transparent"/>

    <com.example.pdedio.sendsnap.common.views.BaseButton_
        android:id="@+id/btnCameraRecord"
        android:layout_width="@dimen/camera_btn_record_radius"
        android:layout_height="@dimen/camera_btn_record_radius"
        android:layout_marginBottom="@dimen/camera_btn_record_margin_bottom"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_record_selector"/>

    <com.github.lzyzsd.circleprogress.DonutProgress
        android:id="@+id/pbCameraRecordProgress"
        android:layout_width="@dimen/camera_btn_record_progress_radius"
        android:layout_height="@dimen/camera_btn_record_progress_radius"
        android:layout_marginBottom="@dimen/camera_btn_record_progress_margin_bottom"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        custom:donut_text_color="@android:color/transparent"
        custom:donut_finished_color="@color/camera_btn_record_progress_stroke"
        custom:donut_finished_stroke_width="@dimen/camera_btn_record_progress_stroke_width"
        custom:donut_unfinished_stroke_width="@dimen/camera_btn_record_progress_stroke_width"
        custom:donut_unfinished_color="@color/camera_btn_record_stroke"
        android:background="@drawable/btn_record_progress_background"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clCameraMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        custom:layout_constraintBottom_toTopOf="parent"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        android:background="@color/camera_menu_background"
        android:orientation="vertical">

        <com.example.pdedio.sendsnap.common.views.BaseImageButton_
            android:id="@+id/btnCameraSettings"
            android:layout_width="@dimen/camera_btn_settings_size"
            android:layout_height="@dimen/camera_btn_settings_size"
            android:layout_marginTop="@dimen/camera_btn_settings_margin_top"
            android:layout_marginRight="@dimen/camera_btn_settings_margin_right"
            custom:layout_constraintTop_toTopOf="parent"
            custom:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/btn_settings_white"
            android:background="@null"
            android:scaleType="fitCenter"/>

        <com.example.pdedio.sendsnap.common.views.BaseImageView_
            android:id="@+id/ivCameraLogo"
            android:layout_width="@dimen/camera_iv_logo_size"
            android:layout_height="@dimen/camera_iv_logo_size"
            android:layout_marginTop="@dimen/camera_iv_logo_margin_top"
            app:srcCompat="@drawable/main_logo"
            custom:layout_constraintTop_toBottomOf="@id/btnCameraSettings"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.example.pdedio.sendsnap.common.views.BaseTextView_
            android:id="@+id/txvCameraUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/camera_txv_name_margin_top"
            custom:layout_constraintTop_toBottomOf="@id/ivCameraLogo"
            custom:layout_constraintLeft_toLeftOf="parent"
            custom:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/camera_txv_name_text_size"
            android:textColor="@color/white"/>

        <com.example.pdedio.sendsnap.common.views.BaseImageButton_
            android:id="@+id/btnCameraInvitations"
            android:layout_marginTop="@dimen/camera_menu_buttons_margin_top"
            custom:layout_constraintTop_toBottomOf="@id/txvCameraUserName"
            custom:layout_constraintLeft_toLeftOf="parent"
            custom:layout_constraintRight_toLeftOf="@+id/txvCameraInvitations"
            app:srcCompat="@drawable/ic_invitation_white"
            custom:layout_constraintHorizontal_chainStyle="packed"
            style="@style/ButtonCameraMenu"/>

        <com.example.pdedio.sendsnap.common.views.BaseTextView_
            android:id="@+id/txvCameraInvitations"
            custom:layout_constraintTop_toTopOf="@id/btnCameraInvitations"
            custom:layout_constraintBottom_toBottomOf="@id/btnCameraInvitations"
            custom:layout_constraintLeft_toRightOf="@id/btnCameraInvitations"
            custom:layout_constraintRight_toRightOf="parent"
            android:text="@string/camera_btn_invitations"
            style="@style/TextViewCameraMenu"/>

        <com.example.pdedio.sendsnap.common.views.BaseImageButton_
            android:id="@+id/btnCameraAddFriends"
            custom:layout_constraintTop_toBottomOf="@id/btnCameraInvitations"
            custom:layout_constraintLeft_toLeftOf="parent"
            custom:layout_constraintRight_toLeftOf="@+id/txvCameraAddFriends"
            app:srcCompat="@drawable/ic_add_contact_white"
            custom:layout_constraintHorizontal_chainStyle="packed"
            style="@style/ButtonCameraMenu"/>

        <com.example.pdedio.sendsnap.common.views.BaseTextView_
            android:id="@+id/txvCameraAddFriends"
            custom:layout_constraintTop_toTopOf="@id/btnCameraAddFriends"
            custom:layout_constraintBottom_toBottomOf="@id/btnCameraAddFriends"
            custom:layout_constraintLeft_toRightOf="@id/btnCameraAddFriends"
            custom:layout_constraintRight_toRightOf="parent"
            android:text="@string/camera_btn_add_friends_text"
            style="@style/TextViewCameraMenu"/>

        <com.example.pdedio.sendsnap.common.views.BaseImageButton_
            android:id="@+id/btnCameraMyFriends"
            custom:layout_constraintTop_toBottomOf="@id/btnCameraAddFriends"
            custom:layout_constraintLeft_toLeftOf="parent"
            custom:layout_constraintRight_toLeftOf="@+id/txvCameraMyFriends"
            app:srcCompat="@drawable/ic_contacts_white"
            custom:layout_constraintHorizontal_chainStyle="packed"
            style="@style/ButtonCameraMenu"/>

        <com.example.pdedio.sendsnap.common.views.BaseTextView_
            android:id="@+id/txvCameraMyFriends"
            custom:layout_constraintTop_toTopOf="@id/btnCameraMyFriends"
            custom:layout_constraintBottom_toBottomOf="@id/btnCameraMyFriends"
            custom:layout_constraintLeft_toRightOf="@id/btnCameraMyFriends"
            custom:layout_constraintRight_toRightOf="parent"
            android:text="@string/camera_btn_my_friends_text"
            style="@style/TextViewCameraMenu"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout >